compiler/tools/fpp-check/test/component/struct_undef_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/struct_undef_constant.fpp: 2.37
  struct S { x: U32 } default { x = a }
                                    ^
error: undefined symbol a
